--- a/hw1/rag-intro.ipynb
+++ b/hw1/rag-intro.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        " 'course': 'data-engineering-zoomcamp'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x74e0638f3760>"
+       "<minsearch.Index at 0x775e91ef6110>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "  'course': 'data-engineering-zoomcamp'}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,29 +218,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = client.chat.completions.create(\n",
+    "    model = 'gpt-4o',\n",
+    "    messages = [{\"role\": \"user\", \"content\": q}]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatCompletionMessage(content='It depends on the specific course and the policies of the institution or organization offering it. Some courses allow late enrollments within a certain timeframe, while others may not accept new students once the course has started. \\n\\nYour best bet is to contact the course instructor or the administration office to inquire about the possibility of joining the course late. They can provide you with the most accurate information and let you know if there are any prerequisites or catch-up work that might be necessary.', role='assistant', function_call=None, tool_calls=None)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.choices[0].message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It depends on the specific course and the policies of the institution or organization offering it. Some courses allow late enrollments within a certain timeframe, while others may not accept new students once the course has started. \\n\\nYour best bet is to contact the course instructor or the administration office to inquire about the possibility of joining the course late. They can provide you with the most accurate information and let you know if there are any prerequisites or catch-up work that might be necessary.'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template = \"\"\"\n",
+    "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FSQ database.\n",
+    "Use only the facts from the CONTEXT when asnwering the QUESTION.\n",
+    "If the CONTEXT doesn't contain the answer, output NONE.\n",
+    "\n",
+    "QUESTION: {question}\n",
+    "\n",
+    "CONTEXT: {context}\n",
+    "\"\"\"\n",
+    "context = \"\"\n",
+    "for doc in results:\n",
+    "    context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
+    "\n",
+    "prompt = prompt_template.format(question=q, context=context).strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-06-23 16:41:07--  https://raw.githubusercontent.com/DataTalksClub/llm-zoomcamp/main/01-intro/parse-faq.ipynb\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 5860 (5.7K) [text/plain]\n",
-      "Saving to: ‘parse-faq.ipynb’\n",
+      "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FSQ database.\n",
+      "Use only the facts from the CONTEXT when asnwering the QUESTION.\n",
+      "If the CONTEXT doesn't contain the answer, output NONE.\n",
       "\n",
-      "parse-faq.ipynb     100%[===================>]   5.72K  --.-KB/s    in 0s      \n",
+      "QUESTION: the course has bugun, can I still join?\n",
       "\n",
-      "2024-06-23 16:41:07 (11.2 MB/s) - ‘parse-faq.ipynb’ saved [5860/5860]\n",
-      "\n"
+      "CONTEXT: section: General course-related questions\n",
+      "question: Course - Can I still join the course after the start date?\n",
+      "answer: Yes, even if you don't register, you're still eligible to submit the homeworks.\n",
+      "Be aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\n",
+      "\n",
+      "section: General course-related questions\n",
+      "question: Course - When will the course start?\n",
+      "answer: The purpose of this document is to capture frequently asked technical questions\n",
+      "The exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\n",
+      "Subscribe to course public Google Calendar (it works from Desktop only).\n",
+      "Register before the course starts using this link.\n",
+      "Join the course Telegram channel with announcements.\n",
+      "Don’t forget to register in DataTalks.Club's Slack and join the channel.\n",
+      "\n",
+      "section: General course-related questions\n",
+      "question: Course - Can I follow the course after it finishes?\n",
+      "answer: Yes, we will keep all the materials after the course finishes, so you can follow the course at your own pace after it finishes.\n",
+      "You can also continue looking at the homeworks and continue preparing for the next cohort. I guess you can also start working on your final capstone project.\n",
+      "\n",
+      "section: General course-related questions\n",
+      "question: Course - What can I do before the course starts?\n",
+      "answer: You can start by installing and setting up all the dependencies and requirements:\n",
+      "Google cloud account\n",
+      "Google Cloud SDK\n",
+      "Python 3 (installed with Anaconda)\n",
+      "Terraform\n",
+      "Git\n",
+      "Look over the prerequisites and syllabus to see if you are comfortable with these subjects.\n",
+      "\n",
+      "section: General course-related questions\n",
+      "question: How can we contribute to the course?\n",
+      "answer: Star the repo! Share it with friends if you find it useful ❣️\n",
+      "Create a PR if you see you can improve the text or the structure of the repository.\n"
      ]
     }
    ],
    "source": [
-    "!wget https://raw.githubusercontent.com/DataTalksClub/llm-zoomcamp/main/01-intro/parse-faq.ipynb"
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Yes, you can still join the course even if it has already begun. You are eligible to submit the homework but be aware of the deadlines for turning in the final projects. Make sure not to leave everything for the last minute.'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = client.chat.completions.create(\n",
+    "    model = 'gpt-4o',\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    ")\n",
+    "\n",
+    "response.choices[0].message.content"
    ]
   },
   {
@@ -253,7 +398,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -271,5 +416,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
