--- a/hw1/rag-intro.ipynb
+++ b/hw1/rag-intro.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,33 +40,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-06-23 16:24:06--  https://raw.githubusercontent.com/DataTalksClub/llm-zoomcamp/main/01-intro/documents.json\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.109.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 658332 (643K) [text/plain]\n",
-      "Saving to: ‘documents.json’\n",
-      "\n",
-      "documents.json      100%[===================>] 642.90K  --.-KB/s    in 0.02s   \n",
-      "\n",
-      "2024-06-23 16:24:06 (32.1 MB/s) - ‘documents.json’ saved [658332/658332]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget https://raw.githubusercontent.com/DataTalksClub/llm-zoomcamp/main/01-intro/documents.json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import json"
@@ -74,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +83,7 @@
        " 'course': 'data-engineering-zoomcamp'}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x775e91ef6110>"
+       "<minsearch.Index at 0x71fa5ab2b250>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +180,7 @@
        "  'course': 'data-engineering-zoomcamp'}]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = OpenAI()"
+    "#client = OpenAI()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletionMessage(content='It depends on the specific course and the policies of the institution or organization offering it. Some courses allow late enrollments within a certain timeframe, while others may not accept new students once the course has started. \\n\\nYour best bet is to contact the course instructor or the administration office to inquire about the possibility of joining the course late. They can provide you with the most accurate information and let you know if there are any prerequisites or catch-up work that might be necessary.', role='assistant', function_call=None, tool_calls=None)"
+       "ChatCompletionMessage(content=\"It would depend on the specific course and its policies. Many courses have a grace period during which new students can join after the official start date. \\n\\nHere are a few steps you can take to find out:\\n\\n1. **Check the Course Website:** Look for any information about late registration or enrollment policies.\\n2. **Contact the Instructor:** Send an email or message to the course instructor explaining your situation.\\n3. **Reach Out to Administration:** If applicable, contact the administrative office or registrar for the program offering the course.\\n4. **Review the Syllabus:** If you have access to the syllabus, it may contain information about late entries.\\n\\nIf you explain your situation and express your enthusiasm for the course, there's a good chance they might accommodate you.\", role='assistant', function_call=None, tool_calls=None)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'It depends on the specific course and the policies of the institution or organization offering it. Some courses allow late enrollments within a certain timeframe, while others may not accept new students once the course has started. \\n\\nYour best bet is to contact the course instructor or the administration office to inquire about the possibility of joining the course late. They can provide you with the most accurate information and let you know if there are any prerequisites or catch-up work that might be necessary.'"
+       "\"It would depend on the specific course and its policies. Many courses have a grace period during which new students can join after the official start date. \\n\\nHere are a few steps you can take to find out:\\n\\n1. **Check the Course Website:** Look for any information about late registration or enrollment policies.\\n2. **Contact the Instructor:** Send an email or message to the course instructor explaining your situation.\\n3. **Reach Out to Administration:** If applicable, contact the administrative office or registrar for the program offering the course.\\n4. **Review the Syllabus:** If you have access to the syllabus, it may contain information about late entries.\\n\\nIf you explain your situation and express your enthusiasm for the course, there's a good chance they might accommodate you.\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -365,16 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Yes, you can still join the course even if it has already begun. You are eligible to submit the homework but be aware of the deadlines for turning in the final projects. Make sure not to leave everything for the last minute.'"
+       "\"Yes, even if you don't register, you're still eligible to submit the homeworks. Be aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\""
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,6 +359,108 @@
     ")\n",
     "\n",
     "response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Formulate the pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(query):\n",
+    "    boost = {'question': 3.0, 'section': 0.5}\n",
+    "\n",
+    "    results = index.search(\n",
+    "        query=query,\n",
+    "        filter_dict={'course': 'data-engineering-zoomcamp'},\n",
+    "        boost_dict=boost,\n",
+    "        num_results=5\n",
+    "    )\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_prompt(query, search_results):\n",
+    "    prompt_template = \"\"\"\n",
+    "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
+    "Use only the facts from the CONTEXT when answering the QUESTION.\n",
+    "\n",
+    "QUESTION: {question}\n",
+    "\n",
+    "CONTEXT: \n",
+    "{context}\n",
+    "\"\"\".strip()\n",
+    "\n",
+    "    context = \"\"\n",
+    "    \n",
+    "    for doc in search_results:\n",
+    "        context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
+    "    \n",
+    "    prompt = prompt_template.format(question=query, context=context).strip()\n",
+    "    return prompt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm(prompt):\n",
+    "    response = client.chat.completions.create(\n",
+    "        model='gpt-4o',\n",
+    "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
+    "    )\n",
+    "    \n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = 'Can I use redshift?'\n",
+    "\n",
+    "def rag(query):\n",
+    "    search_results = search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Yes, you can use any tool you want for your project, including Redshift. However, please note that if you choose to use a different tool or stack, the course cannot support you with that choice, and you will need to explain your tool choices during the peer review of your capstone project.'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag(query)"
    ]
   },
   {
