--- a/hw4/hw4_problems.ipynb
+++ b/hw4/hw4_problems.ipynb
@@ -90,10 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d810b0c0-69a4-4a1a-a377-3ae8a7794bc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.10.13/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm.auto import tqdm"
    ]
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "265890e1-0e36-49b5-84f0-ff2a934efda2",
    "metadata": {},
    "outputs": [],
@@ -368,9 +377,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bbf10284-1a08-4b23-a90b-12b891a82682",
+   "metadata": {},
+   "source": [
+    "## Q4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f8f3cb03-8b07-4b8d-b1c2-c2644b09267b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rouge import Rouge\n",
+    "rouge_scorer = Rouge()\n",
+    "\n",
+    "r_answer_llm = df.iloc[10].answer_llm\n",
+    "r_answer_orig = df.iloc[10].answer_orig\n",
+    "scores = rouge_scorer.get_scores(r_answer_llm, r_answer_orig)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2ea33618-b1df-4a0e-8ee7-90dc045f0b91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rouge-1': {'r': 0.45454545454545453,\n",
+       "  'p': 0.45454545454545453,\n",
+       "  'f': 0.45454544954545456},\n",
+       " 'rouge-2': {'r': 0.21621621621621623,\n",
+       "  'p': 0.21621621621621623,\n",
+       "  'f': 0.21621621121621637},\n",
+       " 'rouge-l': {'r': 0.3939393939393939,\n",
+       "  'p': 0.3939393939393939,\n",
+       "  'f': 0.393939388939394}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5acf86e-f6e5-414a-a9fa-4989b6fbd5d5",
+   "metadata": {},
+   "source": [
+    "## Q5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "40f4412f-de49-4937-828c-aa101fd28962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_scores = np.mean([scores[key]['f'] for key in scores])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9ee83ed4-f1a2-4912-8ce2-b5e9e04a3b78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35490034990035496"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "036ff631-337b-4ae5-b677-189ef89b0e15",
+   "metadata": {},
+   "source": [
+    "## Q6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "54fd7845-57d2-4ef0-b535-22f237501e8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 300/300 [00:00<00:00, 616.20it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores_ls = []\n",
+    "\n",
+    "for i in tqdm(range(df.shape[0])):\n",
+    "    s1 = df.iloc[i].answer_llm\n",
+    "    s2 = df.iloc[i].answer_orig\n",
+    "    score = rouge_scorer.get_scores(r_answer_llm, r_answer_orig)[0]\n",
+    "    scores_ls.append(score['rouge-2']['f'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b07bc0dc-3d02-4b5b-86f4-41fa72630241",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21621621121621634"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(scores_ls)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61c5da42-d951-4c8e-9c9f-e051fe9cfead",
+   "id": "a8dd055c-cb3b-4feb-aae9-036f9f212590",
    "metadata": {},
    "outputs": [],
    "source": []
